--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "cypress": "^13.6.1",
+    "cypress-file-upload": "^5.0.8",
     "cypress-plugin-api": "^1.5.0"
   }
 }
