--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "cypress": "^13.6.1",
     "cypress-file-upload": "^5.0.8",
-    "cypress-plugin-api": "^1.5.0"
+    "cypress-plugin-api": "^1.5.0",
+    "cypress-tesults-reporter": "^1.4.1"
   }
 }
